template stage done

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SJBIT IEEE Student Chapter</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -16,7 +17,7 @@
 	</div>	
 	<div class="row2">
 		<div class="logoIEEE">
-			<img src="IEEE.png" alt="ieee logo" height="70%" width="65%">
+			<img src="IEEE.png" alt="ieee logo" height="50%" width="50%">
 		</div>
 		<div class="gallery">
 			<h1>SJBIT IEEE Student Chapter</h1>
@@ -42,13 +43,37 @@
 				    myIndex++;
 				    if (myIndex > x.length) {myIndex = 1}    
 				    x[myIndex-1].style.display = "block";  
-				    setTimeout(carousel, 2000); // Change image every 2 seconds
+				    setTimeout(carousel, 4200); 
 				}
 			</script>
 		</div>
 		<div class="logoSJB">
 			<img src="LOGO.png" alt="sjb logo" height="90%" width="90%">
 		</div>
+	</div>
+	<div class="main_body">
+		<div class="r1">
+			<div class="b1">&nbsp</div>
+			<div class="b2">&nbsp</div>
+		</div>
+		<div class="r2">
+			<div class="b3">&nbsp</div>
+			<div class="b4">&nbsp</div>
+			<div class="c1">
+				<div class="b5">&nbsp</div>
+				<div class="b6">&nbsp</div>
+			</div>
+		</div>
+		<div class="r3">
+			<div class="c2">
+				<div class="b7">&nbsp</div>
+				<div class="b8">&nbsp</div>
+			</div>
+			<div class="b9">&nbsp</div>
+		</div>
+	</div>
+	<div class="footer">
+		<h2>&copy SJBIT-2017 | Prajwal Prashanth | Prajwal T.S</h2>
 	</div>
 
 </body>
