--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SJBIT IEEE Student Chapter</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" media="screen and (max-width: 480px) and (min-width: 390px)" href="styles2.css">
+	<link rel="stylesheet" media="screen and (max-width: 600px) and (min-width: 480px)" href="styles3.css">
+	<link rel="stylesheet" media="screen and (max-width: 768px) and (min-width: 600px)" href="styles4.css">
+	<link rel="stylesheet" media="screen and (min-width: 768px)" href="styles5.css">
 </head>
 <body>
 	<div class="row1">
@@ -17,7 +21,7 @@
 	</div>	
 	<div class="row2">
 		<div class="logoIEEE">
-			<img src="IEEE.png" alt="ieee logo" height="50%" width="50%">
+			<img src="IEEE.png" alt="ieee logo" height="95%" width="90%">
 		</div>
 		<div class="gallery">
 			<h1>SJBIT IEEE Student Chapter</h1>
@@ -72,9 +76,9 @@
 			<div class="b9">&nbsp</div>
 		</div>
 	</div>
-	<div class="footer">
-		<h2>&copy SJBIT-2017 | Prajwal Prashanth | Prajwal T.S</h2>
-	</div>
+	<footer>
+		<p><h2>&copy 2017-IEEE SJBIT STUDENT CHAPTER <br />PRAJWAL PRASHANTH</h2></p>
+	</footer>
 
 </body>
 </html>
