--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Prajwal Prashanth,PRAJWAL T S" />
+	<meta name="keywords" content="IEEE,sjbit,events,student,chapter,coding,programming" />
+	<meta name="description" content="Webpage of SJBIT IEEE Student Chapter,timeline if events conducted are displayed">
 	<title>SJBIT IEEE Student Chapter</title>
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" media="screen and (max-width: 480px) and (min-width: 390px)" href="styles2.css">
@@ -77,7 +80,7 @@
 		</div>
 	</div>
 	<footer>
-		<p><h2>&copy 2017-IEEE SJBIT STUDENT CHAPTER <br />PRAJWAL PRASHANTH</h2></p>
+		<p><h2>&copy 2017-IEEE SJBIT STUDENT CHAPTER | PRAJWAL PRASHANTH</h2></p>
 	</footer>
 
 </body>
