responsive template with basic seo

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		</div>
 	</div>
 	<footer>
-		<p><h2>&copy 2017-IEEE SJBIT STUDENT CHAPTER | PRAJWAL PRASHANTH</h2></p>
+		<p><h2>&copy 2017-IEEE SJBIT STUDENT CHAPTER <br /> PRAJWAL PRASHANTH | PRAJWAL T S</h2></p>
 	</footer>
 
 </body>
